# non-academic-paper-extractor

./: README.md  pyproject.toml
src/aganitha_papers_cli/: cli.py  pubmed.py
